Fix cast-align warnings in FastMalloc.cpp https://bugs.webkit.org/show_bug.cgi?id=117991

Reviewed by Mark Hahnenberg.

* wtf/FastMalloc.cpp:

Canonical link: https://commits.webkit.org/136357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152349 268f45cc-cd09-0410-ab3c-d52691b4dbfc